# xiangting

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  THIRD-PARTY-NOTICES.md  build.rs
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  publish.yml  rust.yml
benches/: baseline.rs  bench.rs  random_hand.rs
examples/: basic.rs  melds.rs  necessary_and_unnecessary_tiles.rs  performance.rs  three_player.rs
include/: cxx_nyanten.hpp
scripts/: build_map.sh  build_table.sh  run_benchmarks.sh  test_correct_hands.sh  test_verify_correctness.sh
src/: analysis.rs  bingpai.rs  calculate.rs  common.rs  config.rs  constants.rs  error.rs  fulu_mianzi.rs  lib.rs  mianzi.rs  necessary_tiles.rs  qiduizi.rs  replacement_number.rs  shisanyao.rs  shoupai.rs  standard.rs  test_utils.rs  tile.rs  unnecessary_tiles.rs  xiangting_analysis.rs
src/common/: hand_enumerator.rs  random_hand.rs
src/common/random_hand/: hand.rs  rng.rs
src/qiduizi/: necessary_tiles.rs  replacement_number.rs  unnecessary_tiles.rs  xiangting_analysis.rs
src/shisanyao/: common.rs  necessary_tiles.rs  replacement_number.rs  unnecessary_tiles.rs
src/standard/: block_count.rs  calculate.rs  common.rs  core.rs  count_block.rs  hash.rs  necessary_tiles.rs  replacement_number.rs  shupai_table.rs  tile_flag.rs  unnecessary_tiles.rs  unpack.rs  wanzi_19_map.rs  wanzi_19_table.rs  zipai_map.rs  zipai_table.rs
tests/: calsht.rs  correctness.rs  hand_enumerator.rs  hand_generator.rs  nyanten.rs
