[package]
name = "xiangting"
description = "A library for calculating the deficiency number (a.k.a. xiangting number, 向聴数)."
version = "4.0.0"
authors = ["Apricot S."]
edition = "2024"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Apricot-S/xiangting"
keywords = ["mahjong", "shanten", "xiangting"]
categories = ["algorithms"]

[lib]
name = "xiangting"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.17"

[dev-dependencies]
criterion = "0.7.0"
cxx = "1.0.186"
mt19937 = "3.1.0"
rand = "0.9.2"

[build-dependencies]
cxx-build = { version = "1.0.186", optional = true }

[features]
build-file = []
build-map = ["build-file"]
correctness = ["dep:cxx-build"]

[[bin]]
name = "build-table"
path = "src/bin/build_table.rs"
required-features = ["build-file"]

[[bin]]
name = "build-map"
path = "src/bin/build_map/main.rs"
required-features = ["build-map"]

[[bench]]
name = "bench"
harness = false
