[package]
name = "xiangting"
description = "A library for calculating the deficiency number (a.k.a. xiàngtīng number, 向聴数)."
version = "5.0.3"
authors = ["Apricot S."]
edition = "2024"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Apricot-S/xiangting"
keywords = ["mahjong", "riichi", "shanten", "xiangting"]
categories = ["algorithms", "no-std"]

[lib]
name = "xiangting"
path = "src/lib.rs"

[dependencies]
thiserror = { version = "2.0.17", default-features = false }

[dev-dependencies]
criterion = "0.7.0"
cxx = "1.0.186"
rand = "0.9.2"
rand_pcg = "0.9.0"

[build-dependencies]
cxx-build = { version = "1.0.186", optional = true }

[features]
build-file = []
build-map = ["build-file"]
correctness = ["dep:cxx-build"]

[[bin]]
name = "build-table"
path = "src/bin/build_table.rs"
required-features = ["build-file"]

[[bin]]
name = "build-map"
path = "src/bin/build_map/main.rs"
required-features = ["build-map"]

[[bench]]
name = "bench"
harness = false
